# GaussLegendreRule

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  appveyor.yml  doxygen.conf
include/: GaussLegendreRule.hpp
src/: GaussLegendreRule.cpp
test/: TestGaussLegendreRule.cpp
